--- a/default_configs/lightning_config/default_lightning.yaml
+++ b/default_configs/lightning_config/default_lightning.yaml
@@ -1,8 +1,8 @@
 lightning:
   callbacks:
   trainer:
-    precision: 16
+    precision: 32
     accelerator: gpu
     benchmark: True
     accumulate_grad_batches: 1
-    strategy: ddp
+    strategy: ddp_find_unused_parameters_true
